[project]
name = "Spotify-Music-Analytics"
version = "1.0.0"
description = "<This is a dashboard curated from a Spotify Music Analytics dataset.>"
authors = [
  {name = "Shubhi Handa", email = "shubhihanda@gmail.edu"},
  {name = "Emily Song", email = "mbs38@uw.edu"},
  {name = "Skyler Chen", email = "sjc163@uw.edu"}
]
requires-python = ">=3.14"
dependencies = [
    "streamlit (>=1.54.0,<2.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
